--- a/css/layout.css
+++ b/css/layout.css
@@ -3,15 +3,15 @@ main {
   align-items: center;
   justify-content: center;
   flex: 1;
-  padding: 8px 64px;
-  overflow: none;
+  overflow: auto;
+  height: calc(100vh - 90px - 50px);
 }
 
 .header-external-container {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 80px;
+  height: 90px;
   background-color: #0d1b2a;
   padding: 8px 64px;
 }
@@ -25,13 +25,15 @@ main {
 }
 
 .header-title-and-search-container {
- display: flex;
- align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header-title-container {
   display: flex;
   padding-right: 48px;
+  white-space: nowrap;
+  font-size: 14px;
 }
 
 .header-title-container h1 {
@@ -47,7 +49,7 @@ main {
 
 .header-search-input-container {
   display: flex;
-  width: 340px;
+  width: 240px;
   height: 40px;
   border-bottom: 1px solid white;
 }
@@ -81,6 +83,7 @@ main {
   padding: 0 16px;
   font-size: 20px;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .header-navigation-ul li.current {
@@ -93,7 +96,7 @@ main {
 }
 
 .header-navigation-ul :hover {
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .footer-external-container {
@@ -123,4 +126,25 @@ main {
 
 .licensing-container {
   font-size: 12px;
+}
+
+@media (max-width: 575.98px) {
+}
+
+@media (max-width: 767.98px) {
+}
+
+@media (max-width: 991.98px) {
+}
+
+@media (max-width: 1199.98px) {
+  .header-title-and-search-container {
+    flex-direction: column;
+  }
+  .header-title-container {
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 1399.98px) {
 }
