--- a/styles/shared.css
+++ b/styles/shared.css
@@ -6,7 +6,7 @@
   margin: 8px;
 }
 
-.news-card-container img {
+.news-card-container .background {
   position: absolute;
   top: 0;
   left: 0;
@@ -43,9 +43,21 @@
 }
 
 .news-card-read-more-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   padding-top: 8px;
   font-size: 18px;
   text-transform: uppercase;
+}
+
+.news-card-read-more-container button {
+  background: none;
+  border: none;
+  outline: none;
+}
+.news-card-read-more-container button:hover {
+  cursor: pointer;
 }
 
 .default-title {
